revert: fix(bootstrap) do not overflow matched item text
This reverts commit 9ddc48ec819100bd036dea992ff4029915291915.

--- a/src/common.css
+++ b/src/common.css
@@ -152,12 +152,6 @@ body > .select2-container.open {
   right: 15px;
 }
 
-.ui-select-bootstrap .ui-select-match-text {
-    width: 100%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
 /* See Scrollable Menu with Bootstrap 3 http://stackoverflow.com/questions/19227496 */
 .ui-select-bootstrap > .ui-select-choices ,.ui-select-bootstrap > .ui-select-no-choice {
   width: 100%;
